@@ -1335,7 +1335,9 @@ class EnvironmentTestCase(unittest.TestCase):
                 def read(self):
                     return "-I/usr/include/fum -Ibar -X\n" + \
                            "-L/usr/fax -Lfoo -lxxx " + \
-                           "-Wa,-as -Wl,-link -Wp,-cpp abc -pthread -framework Carbon"
+                           "-Wa,-as -Wl,-link -Wp,-cpp abc " + \
+                           "-pthread -framework Carbon " + \
+                           "-mno-cygwin -mwindows"
             return fake_file()
         try:
             os.popen = my_popen
@@ -1346,8 +1348,8 @@ class EnvironmentTestCase(unittest.TestCase):
             assert env['CPPFLAGS'] == ['', '-Wp,-cpp'], env['CPPFLAGS']
             assert env['LIBPATH'] == ['list', '/usr/fax', 'foo'], env['LIBPATH']
             assert env['LIBS'] == ['xxx', env.File('abc')], env['LIBS']
-            assert env['LINKFLAGS'] == ['', '-Wl,-link', '-pthread', '-framework', 'Carbon'], env['LINKFLAGS']
-            assert env['CCFLAGS'] == ['', '-X', '-pthread'], env['CCFLAGS']
+            assert env['LINKFLAGS'] == ['', '-Wl,-link', '-pthread', '-framework', 'Carbon', '-mno-cygwin', '-mwindows'], env['LINKFLAGS']
+            assert env['CCFLAGS'] == ['', '-X', '-pthread', '-mno-cygwin'], env['CCFLAGS']
         finally:
             os.popen = orig_popen
 
